面试题整理
面试题整理

--- a/_posts/2019-06-21-内置对象和基本包装类型.md
+++ b/_posts/2019-06-21-内置对象和基本包装类型.md
@@ -412,7 +412,7 @@ for(var key in obj){
 
 
 
-##### 4.Array
+##### 4.Array数组相关方法
 
 - **入栈**：利用Array对象提供的栈方法实现在数组的末尾、开头添加数组的新元素；
 - **出栈**：在数组的末尾、开头删除数组的元素；
