--- a/_posts/2019-07-07-es6相关 面试问题.md
+++ b/_posts/2019-07-07-es6相关 面试问题.md
@@ -164,6 +164,8 @@ sayHello(...people);//输出：Hello Wayou,John,Sherlock
 
 ⑧ `for of `值遍历：for in 循环用于遍历数组，类数组或对象，for of循环功能相似，不同的是每次循环它**提供的不是序号而是值**。
 
+**for...of** 循环的i代表的是value（**多用于数组**），**for...in** 循环的是key（**多用于对象**）
+
 ⑨ iterator, generator：iterator拥有一个next方法；generator是一种特殊的iterator，通过function*来声明的，**yield 关键字**可以暂停函数的执行，随后可以再进进入函数继续执行。
 
 ⑩ **模块module**
@@ -400,3 +402,4 @@ catch()触发条件是执行了reject()。
 需要注意的就是**await是强制把异步变成了同步，这一句代码执行完，才会执行下一句**。
 
  await必须用在async方法中
+
