--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -275,7 +275,7 @@ this的最终指向的是那个调用它的对象。
 2. 事件函数
 3. 是否捕获（布尔值），默认是`false`，即不捕获，那就是冒泡。
 
-
+  `attachEvent`绑定的事件，如果需要注销，应该使用`detachEvent`
 
 #### 9.三大事件冒泡、捕获是怎么执行的？
 
@@ -895,3 +895,14 @@ function getQueryVariable(variable)
 }
 ```
 
+
+
+#### 19.在js的浏览器对象模型中，window对象的（status）属性是用来指定浏览器状态栏里面的临时消息
+
+status：状态栏信息属性
+
+screen：屏幕对象（也叫显示屏对象）
+
+history：网页历史对象
+
+document：文本对象
