--- a/_posts/2019-07-07-vue相关 面试问题.md
+++ b/_posts/2019-07-07-vue相关 面试问题.md
@@ -239,6 +239,91 @@ new Vue({
 })
 ```
 
+#### vuex的使用
+
+需要在根实例main.js中传入store
+
+```javascript
+import store from './store'
+import 'styles/reset.css'
+import 'styles/border.css'
+import 'styles/iconfont.css'
+import 'swiper/dist/css/swiper.css'
+
+Vue.config.productionTip = false
+fastClick.attach(document.body)
+Vue.use(VueAwesomeSwiper)
+
+new Vue({
+  el: '#app',
+  router,
+  store,
+  components: { App },
+  template: '<App/>'
+})
+```
+
+写在一个页面上的话，需要判断本地是否已经有这个数据了
+
+![1567605439082](/img/assets_2019/1567605439082.png)
+
+在src--store--index.js中声明state、mutations
+
+```javascript
+import Vue from 'vue'
+import Vuex from 'vuex'
+import state from './state'
+import mutations from './mutations'
+
+Vue.use(Vuex)
+
+export default new Vuex.Store({
+  state,
+  mutations
+})
+```
+
+然后在src--store--state.js中声明公共使用的数据
+
+```javascript
+let defaultCity = '上海'
+try {
+  if (localStorage.city) {
+    defaultCity = localStorage.city
+  }
+} catch (e) {}
+
+export default {
+  city: defaultCity //调用的时候，调用city就可以了
+}
+```
+
+在src--store--mutations.js中声明改变公共变量的方法
+
+```javascript
+export default {
+  changeCity (state, city) { //调用的时候使用changeCity就可以了
+    state.city = city
+    try {
+      localStorage.city = city
+    } catch (e) {}
+  }
+}
+```
+
+在实际使用的页面中，就可以直接使用了
+
+```javascript
+// 调用数据
+this.$store.state.city
+//修改store中的内容
+this.$store.dispatch('name',value)
+//或者直接使用commit进行修改
+this.$store.commit('name',value)
+```
+
+
+
 
 
 #### 5. Axios调取数据？
@@ -550,8 +635,10 @@ Vue.component('child',{
 
 | computed 计算属性                                            | watch 观察的动作                                            | methods                          |
 | ------------------------------------------------------------ | ----------------------------------------------------------- | -------------------------------- |
-| 数据会被缓存，只要依赖不发生改变，即使页面重新渲染，该方法就不会调用 | 直接监测一个值的变化，监测值不发生变化，该方法就不会调用    | 每次页面发生渲染，都会被重新调用 |
-|                                                              | 监听复杂数据类型需用深度监听（在被监听对象中使用`handler`） |                                  |
+| 数据会被缓存，只要依赖不发生改变，即使页面重新渲染，该方法也不会被调用 | 直接监测一个值的变化，监测值不发生变化，该方法就不会调用    | 每次页面发生渲染，都会被重新调用 |
+| computed中的函数必须用return返回                             | 监听复杂数据类型需用深度监听（在被监听对象中使用`handler`） |                                  |
+| 在computed中不要对data中的属性进行赋值操作。如果对data中的属性进行赋值操作了，就是data中的属性发生改变，从而触发computed中的函数，形成死循环了。 |                                                             |                                  |
+| 使用场景：当一个值受多个属性影响的时候------------购物车商品结算 |                                                             |                                  |
 
 
 
