--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -62,12 +62,13 @@ typora-root-url: ..
     3. 执行构造函数中的代码（**为这个新函数添加属性**）；
     4. **返回**新对象；
 
-19. 怎么**改变this指向**？
+18. 怎么**改变this指向**？
 
     1. 使用**箭头函数**；
     2. 在函数内部使用`_this=this;`
     3. 使用**apply、call、bind**
     4. new**实例化一个对象**；
+    5. 在非严格模式下，如果如果函数没有用作构造函数，而是仅仅作为普通函数使用的话，那么函数中的this是指向window的。在严格模式下，this的值就是undefined。
 
 21. `stopPropagation()`**阻止事件冒泡**，但不会阻止定义在元素上的其他事件；
 
@@ -549,7 +550,8 @@ export default {
 
 脚本放到HTML代码页底部 
 
-从页面中分离js代码，从外部引入
+从页面中分离js代码，从外部引入。
+
 压缩代码
 减少对DOM的访问
 移除重复的脚本
@@ -848,45 +850,23 @@ $("#button1").unbind("click.a");
 
 9. vue-cli如何使用json数据模拟？
 
-10. 数组的常用操作方法？其中splice 和slice有什么区别？
-
-11. js中怎么绑定事件？
-
 12. 事件委托是什么？
 
 13. HTTP请求中，头部有一个请求，请求头：content-type，发送请求的数据类型
 
-14. ES6中的Promise方法，有两个参数，分别代表什么（记不清了，引到for in）
-
-15. for...in和for ...of 的区别：for...of循环的i代表的是value（多用于数组），for...in循环的是key（多用于对象）
-
 16. bootstrap用了哪些，jQuery用了哪些，css选择器有哪几种，有哪些优先级，+  > 分别表示什么，子代/后代
 
-17. vue中的计算属性computed、watch有什么区别，分别应用于什么场景
-
-18. vue的生命周期，用过的有哪些，怎么用的描述一下；一般在mounted里面用什么
-
-19. Photoshop的使用，学校竞赛的情况，写的项目详细描述一下，用的vue的什么版本
+19. 用的vue的什么版本
 
 20. 项目中轮播图、列表、联动、递归展示使用，后台数据怎么模拟，获取的地址是怎么写的，面试官会详细听，问到代码，甚至会给出一定的意见（v-for改为数组管理），项目的难点在哪里
 
 21. 项目中用到v-for，其中的key值作用，使用效率如何，没有用key会怎么样
 
-22. vue中父子组件传值，用vuex组件传值的时候，代码是怎么写的
-
 23. 学习的方法有哪些，《js高级程序设计》中函数重载了解吗
-
-24. 在js的浏览器对象模型中，window对象的（）属性是用来指定浏览器状态栏里面的临时消息
 
 25. eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
 
 26. 一般html网页元素加载完成后，会触发哪个事件？onready onchange onload onblur
-
-27. addEventListener可以多次给DOM对象增加监听事件吗？
-
-28. attachEvent可以删除DOM对象的监听事件吗.
-
-    `attachEvent`绑定的事件，如果需要注销，应该使用`detachEvent`
 
 29. form标签对之间，可以出现p、ul等非表单域元素吗
 
@@ -949,8 +929,6 @@ $("#button1").unbind("click.a");
 53. react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
 
 54. 数据结构、算法之类的了解吗：学习过但是使用较少，大致讲了下堆栈；讲一下数组去重的题；思想很重要
-
-55. http与https
 
 56. 画一个三角形
 
