--- a/_posts/2019-09-03-旅游移动端.md
+++ b/_posts/2019-09-03-旅游移动端.md
@@ -109,88 +109,7 @@ update在页面数据更新的时候调用。
 this.startY=this.$ref['A'][0].offsetTop;
 ```
 
-#### 9.vuex的使用
 
-需要在根实例main.js中传入store
-
-```javascript
-import store from './store'
-import 'styles/reset.css'
-import 'styles/border.css'
-import 'styles/iconfont.css'
-import 'swiper/dist/css/swiper.css'
-
-Vue.config.productionTip = false
-fastClick.attach(document.body)
-Vue.use(VueAwesomeSwiper)
-
-new Vue({
-  el: '#app',
-  router,
-  store,
-  components: { App },
-  template: '<App/>'
-})
-```
-
-写在一个页面上的话，需要判断本地是否已经有这个数据了
-
-![1567605439082](/../../img/assets_2019/1567605439082.png)
-
-在src--store--index.js中声明state、mutations
-
-```javascript
-import Vue from 'vue'
-import Vuex from 'vuex'
-import state from './state'
-import mutations from './mutations'
-
-Vue.use(Vuex)
-
-export default new Vuex.Store({
-  state,
-  mutations
-})
-```
-
-然后在src--store--state.js中声明公共使用的数据
-
-```javascript
-let defaultCity = '上海'
-try {
-  if (localStorage.city) {
-    defaultCity = localStorage.city
-  }
-} catch (e) {}
-
-export default {
-  city: defaultCity //调用的时候，调用city就可以了
-}
-```
-
-在src--store--mutations.js中声明改变公共变量的方法
-
-```javascript
-export default {
-  changeCity (state, city) { //调用的时候使用changeCity就可以了
-    state.city = city
-    try {
-      localStorage.city = city
-    } catch (e) {}
-  }
-}
-```
-
-在实际使用的页面中，就可以直接使用了
-
-```javascript
-// 调用数据
-this.$store.state.city
-//修改store中的内容
-this.$store.dispatch('name',value)
-//或者直接使用commit进行修改
-this.$store.commit('name',value)
-```
 
 #### 10.跳转页面的两种方法
 
@@ -233,7 +152,7 @@ export default {
 
 **带来的问题**：再次加载页面的时候不会再执行`mounted()`当中的方法，同时由于使用了`keep-alive`会让页面多出生命周期函数`activated()`，表示当前**页面重新显示**的时候。
 
-![1567605471639](/../../img/assets_2019/1567605471639.png)
+![1567605471639](/img/assets_2019/1567605471639.png)
 
 **带来的变化**：首次加载一个页面的时候，`mounted()`和`activated()`**一起执行**；后来重复访问页面的时候，只有`activated()`执行；（注意解绑全局事件）
 
@@ -251,7 +170,7 @@ background-image:liner-gradient(top,rgba(0,0,0,0),rgba(0,0,0,.8));
 
 #### 14.递归组件：自己调用自己（其中数据要用绑定的:list获得）
 
-![1567605498012](/../../img/assets_2019/1567605498012.png)
+![1567605498012](/img/assets_2019/1567605498012.png)
 
 #### 16.axios的简单写法
 
