--- a/_posts/2019-07-07-html相关 面试问题.md
+++ b/_posts/2019-07-07-html相关 面试问题.md
@@ -88,6 +88,8 @@ typora-root-url: ..
 
 块级元素：div、h、ol、ul、dl、li、table、td、th、tr、dd、dt、p、caption
 
+空元素：area、meta、link
+
 - 行内元素的特点：
 
   1、行内元素**只能容纳文本或者其他行内元素**。
@@ -131,3 +133,13 @@ typora-root-url: ..
 #### 3.html中首行<!doctype>的作用？
 
 ​	**文档类型声明**，目的是告诉标准通用标记语言解析器要使用什么样的文档类型定义（DTD）来解析文档；声明必须是HTML文档的第一行，位于html标签之前；
+
+
+
+#### 4.rem相对于根节点。em相对于父元素
+
+
+
+#### 5.一般html网页元素加载完成后，会触发哪个事件？
+
+onready onchange onload onblur
