--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -29,8 +29,6 @@ typora-root-url: ..
 
 6. **使用new**后函数中**this指向新创建的对象**；不使用new，函数中this指向全局对象；
 
-7. 
-
 8. 在**测试相等性**时，基本类型通过它们的值进行比较；对象通过它们的引用进行比较（判断是否具有**对内存中相同位置的引用**）；
 
 9. **关闭tab标签页后，`sessionStrorage`存储的数据才会删除**；
@@ -62,7 +60,7 @@ typora-root-url: ..
     3. 执行构造函数中的代码（**为这个新函数添加属性**）；
     4. **返回**新对象；
 
-18. 怎么**改变this指向**？
+17. 怎么**改变this指向**？
 
     1. 使用**箭头函数**；
     2. 在函数内部使用`_this=this;`
@@ -106,6 +104,44 @@ typora-root-url: ..
 header('Access-Control-Allow-Origin:*');//允许所有来源访问
 header('Access-Control-Allow-Method:POST,GET');//允许访问的方式
 ```
+
+
+
+#### 如何实现浏览器多个标签页tab之间通信
+
+跨域的如上，同源不跨域的方法如下：
+
+**1.websocket通讯**：WebSocket是HTML5新增的协议，它的目的是在浏览器和服务器之间建立一个不受限的双向通信的通道，比如说，服务器可以在任意时刻发送消息给浏览器。
+
+首先，浏览器用`wss://xxx`创建WebSocket连接时，会先通过HTTPS创建安全的连接，然后，该HTTPS连接升级为WebSocket连接，底层通信走的仍然是安全的SSL/TLS协议。WebSocket连接必须由浏览器发起，**特点**：
+
+（1）建立在 TCP 协议之上，服务器端的实现比较容易。
+
+（2）与 HTTP 协议有着良好的兼容性。默认端口也是80和443，并且握手阶段采用 HTTP 协议，因此握手时不容易屏蔽，能通过各种 HTTP 代理服务器。
+
+（3）数据格式比较轻量，性能开销小，通信高效。
+
+（4）可以发送文本，也可以发送二进制数据。
+
+（5）没有同源限制，客户端可以与任意服务器通信。
+
+（6）协议标识符是`ws`（如果加密，则为`wss`），服务器网址就是 URL。
+
+**为什么传统的HTTP协议不能做到WebSocket实现的功能？**这是因为HTTP协议是一个请求－响应协议，请求必须先由浏览器发给服务器，服务器才能响应这个请求，再把数据发送给浏览器。
+
+**2.定时器setInterval+cookie**：①在页面A设置一个使用 `setInterval` 定时器不断刷新，检查 `Cookies` 的值是否发生变化，如果变化就进行刷新的操作。②由于 `Cookies` 是在同域可读的，所以在页面 B 审核的时候改变 `Cookies` 的值，页面 A 自然是可以拿到的。
+
+**3.使用localstorage**：localstorage是浏览器多个标签共用的存储空间，所以可以用来实现多标签之间的通信(ps：session是会话级的存储空间，每个标签页都是单独的）。直接在window对象上添加监听即可：
+
+```javascript
+window.onstorage = (e) => {console.log(e)}
+// 或者这样
+window.addEventListener('storage', (e) => console.log(e))
+```
+
+onstorage以及storage事件，针对都是**非当前页面**对localStorage进行修改时才会触发，当前页面修改localStorage不会触发监听函数。然后就是在对原有的数据的值进行修改时才会触发，比如原本已经有一个key会a值为b的localStorage，你再执行：`localStorage.setItem('a', 'b')`代码，同样是不会触发监听函数的。
+
+**4.html5浏览器的新特性SharedWorker**：普通的webworker直接使用`new Worker()`即可创建，这种webworker是**当前页面**专有的。然后还有种共享worker(SharedWorker)，这种是可以多个标签页、iframe共同使用的。
 
 
 
@@ -589,7 +625,7 @@ WebP格式：谷歌开发一种旨在加快图片加载速度的图片格式
 })
 ```
 
-#### 
+
 
 
 
@@ -834,7 +870,17 @@ $("#button1").unbind("click.a");
 
 #### 17.从输入URL到页面加载完成，发生了什么
 
-域名解析 --> 发起TCP的3次握手 --> 建立TCP连接后发起http请求 --> 服务器响应http请求，浏览器得到html代码 --> 浏览器解析html代码，并请求html代码中的资源（如js、css、图片等） --> 浏览器对页面进行渲染呈现给用户
+域名解析 --> 
+
+发起TCP的3次握手 -->
+
+ 建立TCP连接后发起http请求 -->
+
+ 服务器响应http请求，浏览器得到html代码 --> 
+
+浏览器解析html代码，并请求html代码中的资源（如js、css、图片等） --> 
+
+浏览器对页面进行渲染呈现给用户
 
 
 
@@ -856,17 +902,11 @@ $("#button1").unbind("click.a");
 
 16. bootstrap用了哪些，jQuery用了哪些，css选择器有哪几种，有哪些优先级，+  > 分别表示什么，子代/后代
 
-19. 用的vue的什么版本
-
 20. 项目中轮播图、列表、联动、递归展示使用，后台数据怎么模拟，获取的地址是怎么写的，面试官会详细听，问到代码，甚至会给出一定的意见（v-for改为数组管理），项目的难点在哪里
-
-21. 项目中用到v-for，其中的key值作用，使用效率如何，没有用key会怎么样
 
 23. 学习的方法有哪些，《js高级程序设计》中函数重载了解吗
 
 25. eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
-
-26. 一般html网页元素加载完成后，会触发哪个事件？onready onchange onload onblur
 
 29. form标签对之间，可以出现p、ul等非表单域元素吗
 
@@ -933,10 +973,6 @@ $("#button1").unbind("click.a");
 56. 画一个三角形
 
 57. 实现0.5px横线
-
-58. rem 与em
-
-    rem相对于根节点。em相对于父元素
 
 59. 盒子模型height
 
