--- a/_posts/2019-06-17-冒泡排序、插入排序.md
+++ b/_posts/2019-06-17-冒泡排序、插入排序.md
@@ -62,6 +62,37 @@ var arr = [1, 9, 5, 2, 10, 3, 6, 4];// 待排序数组
             }
         }
 ```
+3.优化冒泡：设置一个标志位，减少不必要的循环
+
+当原数组是，`arr = [1,2,4,3];`在经过第一轮冒泡排序之后，数组就变成了`arr = [1,2,3,4];`
+此时，数组已经排序完成了，但是按上面的代码来看，数组还会继续排序，所以我们加一个标志位，如果某次循环完后，没有任何两数进行交换，就将标志位 设置为 true，表示排序完成，这样我们就可以减少不必要的排序，提高性能。
+
+```javascript
+var arr = [3, 4, 1, 2];
+function bubbleSort (arr) {
+  var max = arr.length - 1;
+  for (var j = 0; j < max; j++) {
+    // 声明一个变量，作为标志位
+    var done = true;
+    for (var i = 0; i < max - j; i++) {
+      if (arr[i] > arr[i + 1]) {
+        var temp = arr[i];
+        arr[i] = arr[i + 1];
+        arr[i + 1] = temp;
+        done = false;
+      }
+    }
+    if (done) {
+      break;
+    }
+  }
+  return arr;
+}
+bubbleSort(arr);
+```
+
+
+
 ### 插入排序  是冒泡排序的优化。
 
 **实现原理**：通过构建有序数组对元素进行存储。
@@ -78,3 +109,26 @@ var arr = [89, 56, 100, 21, 87, 45, 1, 88]; // 待排序数组
             }
 }
 ```
+
+#### 快速排序
+
+```javascript
+var quickSort = function(arr) {
+　　if (arr.length <= 1) { return arr; }
+　　var pivotIndex = Math.floor(arr.length / 2);
+　　var pivot = arr.splice(pivotIndex, 1)[0];
+　　var left = [];
+　　var right = [];
+　　for (var i = 0; i < arr.length; i++){
+　　　　if (arr[i] < pivot) {
+　　　　　　left.push(arr[i]);
+　　　　} else {
+　　　　　　right.push(arr[i]);
+　　　　}
+　　}
+　　return quickSort(left).concat([pivot], quickSort(right));
+    //或者可以写成
+   return [...qSort(left), ...[base], ...qSort(right)]
+};
+```
+
