--- a/_posts/2019-07-07-html相关 面试问题.md
+++ b/_posts/2019-07-07-html相关 面试问题.md
@@ -140,6 +140,33 @@ typora-root-url: ..
 
 
 
-#### 5.一般html网页元素加载完成后，会触发哪个事件？
+#### 5.一般html网页元素加载完成后，会触发哪个事件？onready比onload先执行
 
-onready onchange onload onblur
+##### Dom文档加载的步骤：
+
+1. 解析html结构；
+2. **加载外部**脚本和样式表文件；
+3. 解析并执行脚本；
+4. dom树构建完成（DOMContentLoaded）；
+5. 加载图片等外部文件；
+6. 页面加载完毕。
+
+DOM ready：（也叫DOMContentLoaded ），在第4步完成后触发；
+图片onload：是在第5步完成后触发；
+页面onload：是第6步完成后触发。
+
+由此可见三者执行顺序为：**domready→图片load→页面load。**
+
+
+
+执行时间上，**onready比onload先执行**：
+
+​	**window.onload**必须等到页面内包括图片的**所有元素加载完毕后才能执行**。
+
+​	**$(document).ready()**是**DOM结构绘制完毕后就执行**，不必等到加载完毕。
+
+**onload只执行最后一个**而**onready可以执行多个**：
+
+  编写个数不同 window.onload不能同时编写多个，如果有多个window.onload方法，只会执行最后一个。 **$(document).ready()可以同时编写多个，并且都可以按顺序得到执行**。
+
+注：$(document).ready(function(){})可以简写成$(function(){});
