--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -872,6 +872,10 @@ $("#button1").unbind("click.a");
 
 域名解析 --> 
 
+根据地址栏输入的地址向[DNS（Domain Name System）](https://zh.wikipedia.org/wiki/域名系统)查询IP -->
+
+通过IP向服务器发起TCP连接 -->
+
 发起TCP的3次握手 -->
 
  建立TCP连接后发起http请求 -->
@@ -884,101 +888,142 @@ $("#button1").unbind("click.a");
 
 
 
+#### 18.事件委托是什么？
+
+将事件的处理程序绑定给一个父级元素，当任何子节点触发了匹配的父级元素绑定的事件，即可触发父级节点的处理程序，这就是 **事件委托** 。
+
+事件委托是通过事件 ”冒泡“ 来用单个父节点而非多个子节点响应 [UI Events](https://www.w3.org/TR/uievents/) 的技巧。
+
+**优点：**
+
+* **减少事件绑定**，事件委托将很多子元素的事件绑定都集中到一个通用的父元素，使得**动态创建和移除的元素**更加方便，**对于新添加的元素也会有之前的事件**，不需要考虑元素的事件绑定逻辑。假设需要对 <li> 标签进行增加，只管进行操作就行，不用增加元素的 “onclick” 事件。
+* **减少事件监听使用的内存**，这可能对那些经常重新加载的小页面效果不明显，但是对需要长时间运行的应用很重要。因为当元素被从 DOM 中移除之后很难追踪它对内存的使用，造成内存泄露，这是由元素的事件绑定造成的。有了事件委托，在移除子元素之后不用担心没有解除绑定事件。
+
+**那什么样的事件可以用事件委托，什么样的事件不可以用呢？**
+
+适合用事件委托的事件：click，mousedown，mouseup，keydown，keyup，keypress。值得注意的是，mouseover和mouseout虽然也有事件冒泡，但是处理它们的时候需要特别的注意，因为需要经常计算它们的位置，处理起来不太容易。
+
+不适合的就有很多了，举个例子，mousemove，每次都要计算它的位置，非常不好把控，在不如说focus，blur之类的，本身就没用冒泡的特性，自然就不能用事件委托了。
+
+```html
+<ul id='ul'>
+    <li>111111</li>
+    <li>222222</li>
+    <li>333333</li>
+ </ul>
+ <button id='button'>添加元素</button>
+```
+
+```javascript
+window.onload = function(){
+      let Ul = document.getElementById('ul');
+      let Li = oUl.getElementsByTagName('li');
+      let but = document.getElementById('button');
+      let now = 3;
+      // 事件源：event对象，不管在哪个事件中，只要你操作的哪个元素就是事件源
+      // ie：window.event.srcElement
+      // 标准：event.target
+      //Event对象提供了一个属性叫target，可以返回事件的目标节点，我们成为事件源，也就是说，target就可以表示为当前的事件操作的dom，但是不是真正操作dom，当然，这个是有兼容性的，标准浏览器用ev.target，IE浏览器用event.srcElement，此时只是获取了当前节点的位置，并不知道是什么节点名称，这里我们用nodeName来获取具体是什么标签名，这个返回的是一个大写的，我们需要转成小写再做比较（习惯问题）
+      oUl.onmouseover = function(e){
+        let ev = e || window.event;
+        let target = ev.target || ev.srcElement;
+        if(target.nodeName.toLowerCase() == 'li'){
+          target.style.background = 'red';
+        }
+      }
+      oUl.onmouseout = function(e){
+        let ev = e || window.event;
+        let target = ev.target || ev.srcElement;
+        if(target.nodeName.toLowerCase() == 'li'){
+          target.style.background = '';
+        }
+      }
+      but.onclick = function(){
+        now ++;
+        let newLi = document.createElement('li');
+        newLi.innerHTML = 111111 * now;
+        Ul.appendChild(newLi);
+      }
+    }
+```
+
 
 
 
 
 1. Canvas绘图；
-
 2. Webpack；
-
 3. Ajax遇到拦截器，请求数据要重新处理怎么做？
-
-9. vue-cli如何使用json数据模拟？
-
-12. 事件委托是什么？
-
-13. HTTP请求中，头部有一个请求，请求头：content-type，发送请求的数据类型
-
-16. bootstrap用了哪些，jQuery用了哪些，css选择器有哪几种，有哪些优先级，+  > 分别表示什么，子代/后代
-
-20. 项目中轮播图、列表、联动、递归展示使用，后台数据怎么模拟，获取的地址是怎么写的，面试官会详细听，问到代码，甚至会给出一定的意见（v-for改为数组管理），项目的难点在哪里
-
-23. 学习的方法有哪些，《js高级程序设计》中函数重载了解吗
-
-25. eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
-
-29. form标签对之间，可以出现p、ul等非表单域元素吗
-
-30. 在js中，两个整数进行除（/）运算，结果也为整数吗？
-
-31. 属性document.body.scrolWidth表示网页中滚动条的宽度吗？
-
-32. js或DOM操作方便，浏览器兼容的注意项有哪些
-
-33. Web前端开发常见的安全漏洞
-
-34. 轮播图的实现及后台数据抓取
-
-35. 安全性，在无法使用HTTPS的情况下，局域网如何实现防止报文攻击
-
-36. 列举常用浏览器以及说明其内核
-
-37. http和https分别是什么，有什么区别
-
-33. 可以通过什么途径查看一个网站所使用的技术
-
-34. react的核心是什么
-
-35. 为什选择`vue+element`这样一个体系搭建系统？有什么吗优点？
-
-36. 在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
-
-37. 公司要求写代码，用js原生仿照发布者订阅者模式写。
-
-38. 写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
-
-39. 原型链有了解么？
-
-40. 虚拟DOM说一下？在生命周期里的对应阶段？
-
-41. 用的前端组件是什么？
-
-42. 画一下项目的界面结构并且简单介绍下项目
-
-43. 问了一下通讯录界面的布局
-
-44. 验证码有写过没
-
-45. npm有学过除简单命令之外的服务构建么？
-
-46. 说一下webpack的配置问题
-
-47. echarts有用过么？WebGL知道么？
-
-48. 数据结构了解多少？数据库呢？
-
-49. es6怎么声明类？继承怎么写？提出是为了解决什么问题？
-
-50. 在这半年多的学习过程中，觉得前端学习的难点在哪里：封装的太好，原生其实很难
-
-51. 评价一下现在实习的这个项目，包括系统设计之类的：优点：功能和样式都还原了 缺点：html和样式耦合；组件化成都不高，代码难以维护
-
-52. 怎么样去查看内存、性能：性能chrome调试的时候用network的网络选项，内存不清楚
-
-53. react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
-
-54. 数据结构、算法之类的了解吗：学习过但是使用较少，大致讲了下堆栈；讲一下数组去重的题；思想很重要
-
-56. 画一个三角形
-
-57. 实现0.5px横线
-
-59. 盒子模型height
-
-60. 定时器一秒加一次
-
-61. 滚动条
-
+4. vue-cli如何使用json数据模拟？
+5. HTTP请求中，头部有一个请求，请求头：content-type，发送请求的数据类型
+6. bootstrap用了哪些，jQuery用了哪些，css选择器有哪几种，有哪些优先级，+  > 分别表示什么，子代/后代
+7. 项目中轮播图、列表、联动、递归展示使用，后台数据怎么模拟，获取的地址是怎么写的，面试官会详细听，问到代码，甚至会给出一定的意见（v-for改为数组管理），项目的难点在哪里
+8. 学习的方法有哪些，《js高级程序设计》中函数重载了解吗
+9. eval()函数可以解释由js源代码组成的字符串吗？该函数能用调试工具进行断点调试吗？该函数是js自带的函数，会不会引起安全性问题？该函数动态解释字符串，会存在效率问题吗？
+10. form标签对之间，可以出现p、ul等非表单域元素吗
+11. 在js中，两个整数进行除（/）运算，结果也为整数吗？
+12. 属性document.body.scrolWidth表示网页中滚动条的宽度吗？
+13. js或DOM操作方便，浏览器兼容的注意项有哪些
+14. Web前端开发常见的安全漏洞
+15. 轮播图的实现及后台数据抓取
+16. 安全性，在无法使用HTTPS的情况下，局域网如何实现防止报文攻击
+17. 列举常用浏览器以及说明其内核
+18. http和https分别是什么，有什么区别
+19. 可以通过什么途径查看一个网站所使用的技术
+20. react的核心是什么
+21. 为什选择`vue+element`这样一个体系搭建系统？有什么吗优点？
+22. 在实习的项目中，你学到了什么？你认为现在的项目有什么可以优化的地方？
+23. 公司要求写代码，用js原生仿照发布者订阅者模式写。
+24. 写一个左侧导航栏，不能调试，鼠标移动底部变色，参照京东左侧导航栏
+25. 原型链有了解么？简单描述一下
+26. 虚拟DOM说一下？在生命周期里的对应阶段？
+27. 用的前端组件是什么？
+28. 画一下项目的界面结构并且简单介绍下项目
+29. 问了一下通讯录界面的布局
+30. 验证码有写过没
+31. npm有学过除简单命令之外的服务构建么？
+32. 说一下webpack的配置问题
+33. echarts有用过么？WebGL知道么？
+34. 数据结构了解多少？数据库呢？
+35. es6怎么声明类？继承怎么写？提出是为了解决什么问题？
+36. 在这半年多的学习过程中，觉得前端学习的难点在哪里：封装的太好，原生其实很难
+37. 评价一下现在实习的这个项目，包括系统设计之类的：优点：功能和样式都还原了 缺点：html和样式耦合；组件化成都不高，代码难以维护
+38. 怎么样去查看内存、性能：性能chrome调试的时候用network的网络选项，内存不清楚
+39. react用过吗？讲了一下react和vue之前，jQuery和bootstrap，问学过吗？
+40. 数据结构、算法之类的了解吗：学习过但是使用较少，大致讲了下堆栈；讲一下数组去重的题；思想很重要
+41. 画一个三角形
+42. 实现0.5px横线
+43. 盒子模型height
+44. 定时器一秒加一次
+45. 滚动条
 62. Webscoket（解决痛点）
+47. Vue写插件的时候，比较核心的install方法是怎么实现的
+48. 我现有项目里面使用的微信开发者工具是比较原生的小程序开发方法，有没有了解过比较新的小程序写法
+49. es6中Promise、async await、generator分别是怎么使用的，
 
+她给了一个场景：按序分别请求三次数据，前一次调用结束才能开始下一次，怎么写
+
+我回答：在promise里面，await+请求方法，resolve的时候回调下一个请求
+
+她说这种性能比较低，链式的结果就是一个常见的回调地狱
+
+50. 高度塌陷一般出现在哪些场景？怎么解决？
+51. 有没有学过webpack？配置或者loader了解过吗？
+52. keep-alive标签的原理是什么？有什么功能？
+53. http里面cache-control了解吗？有什么作用？
+54. 在页面中的动画，设置一个定时器，间隔一段时间就动一次，考虑性能，以及考虑整个页面的刷新时间，应该设置多长时间？我？？？不知道要问我什么，我说我平常是写死的，500ms
+55. 在同源的标签里面要传递数据，会用什么方法？
+
+我回答不考虑安全性就是local storage，websocket也有（这个问题没查过，做笔试的时候做到过，只知道有这个方法，但是不知道怎么用）
+
+56. ajax的原理
+
+57. 盒模型有哪些？有什么区别？Bootstrap里面用的是什么盒模型
+
+58. rem是基于什么原理进行适配的
+59. cmd和amd有什么区别
+60. 面向对象的基本特性（3个）
+61. 类数组对象是什么
+62. 参数系列化
+63. z-index的生效前提
+64. react生命周期
