面试题整理
面试题整理

--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -154,6 +154,14 @@ const me=inherit(person);//可以继承peroson对象上所有的方法和属性
 4. 当代码中存在循环引用现象时，" 引用计数 "算法就会导致问题；
 5. 解除变量的引用不仅有助于消除循环引用现象，而且对垃圾收集也有好处。为了确保有效的回收内存，应该及时解除不再使用的全局对象、全局对象属性以及循环引用变量的引用。
 
+**代码回收规则如下：**
+
+　　　　**1.全局变量不会被回收。**
+
+　　　　**2.局部变量会被回收，也就是函数一旦运行完以后，函数内部的东西都会被销毁。**
+
+　　　　**3.只要被另外一个作用域所引用就不会被回收**
+
 
 
 #### 4. 闭包是什么？用let怎么实现闭包？有什么优点和缺点？
@@ -229,7 +237,7 @@ this的最终指向的是那个调用它的对象。
 
 1.使用内联；2.使用`.onclick`的方式；3.使用事件监听`addEventListener`的方式；
 
-##### 1、2两种方式都是存在一个**弊端**的，就是一个元素只能添加一个事件。
+**1、2两种方式都是存在一个弊端的，就是一个元素只能添加一个事件。**
 
 ```html
 <!--1.内联-->
@@ -252,7 +260,7 @@ this的最终指向的是那个调用它的对象。
 
 使用这种形式也是可以给一个DOM元素添加上一个事件。
 
-##### 3.给一个元素（DOM对象）添加两个甚至是多个事件
+**3.给一个元素（DOM对象）添加两个甚至是多个事件**
 
 ```html
 <!--3.事件监听addEventListener-->
@@ -289,7 +297,7 @@ this的最终指向的是那个调用它的对象。
 
 #### 10.js处理异步的几种方式
 
-##### **一、回调函数（callback）**
+**一、回调函数（callback）**
 
 **概念**：回调是一个函数被作为一个参数传递到另一个函数里，在那个函数**执行完后再执行**。
 
@@ -347,7 +355,7 @@ elment.addEvenListener("click",handler3,false);
 
 **注意**：该方法的第三个参数是冒泡获取，是一个布尔值：当为false时表示由里向外（冒泡），true表示由外向里（捕获）。
 
-##### 三、发布/订阅（又称观察者模式）
+**三、发布/订阅（又称观察者模式）**
 
 ```javascript
 //jQuery的一个插件 Ben Alman的Tiny Pub/Sub
@@ -362,7 +370,7 @@ function f1(){
 }
 ```
 
-##### **四、promise对象（promise 模式）**
+**四、promise对象（promise 模式）**
 
 **promise是一种模式，promise可以帮忙管理异步方式返回的代码。**将代码进行封装并添加一个类似于事件处理的管理层。我们可以使用promise来注册代码，这些代码会在在promise**成功或者失败后运行**。
 
@@ -381,7 +389,7 @@ f1().then(f2).fail(f3);
 
 **缺点：**编写和理解都相对比较难。
 
-##### **五、**优雅的async/await
+**五、优雅的async/await**
 
 **async** 函数书写的方式跟我们普通的函数书写方式一样，只不过是前面多了一个 `async` 关键字，并且函数返回的是一个 **Promise** 对象，所接收的值就是函数 **return** 的值。
 
@@ -506,7 +514,7 @@ $(window).click(function(){
 
 注意：基本数据类型值不可变，基本类型的比较是值的比较；引用类型值可变，引用类型的比较是引用的比较；
 
-##### 检测类型常用的有typeof和instanceof：
+**检测类型常用的有typeof和instanceof：**
 
 ①typeof：经常用来检测一个变量是不是最基本的数据类型
 
@@ -906,3 +914,73 @@ screen：屏幕对象（也叫显示屏对象）
 history：网页历史对象
 
 document：文本对象
+
+
+
+
+
+#### 20.隐式转换（三种）掘金有篇博客:你所忽略的js隐式转换
+
+`+`运算符即可数字相加，也可以字符串相加。所以转换时很麻烦。
+
+`== `不同于===，故也存在隐式转换。
+
+`- * /` 这些运算符只会针对number类型，故转换的结果只能是转换成number类型。
+
+隐式转换中主要涉及到三种转换：
+
+​	1、**将值转为原始值**，ToPrimitive(input, PreferredType?)。
+
+valueOf(),toString()
+
+PreferredType没有设置时，Date类型的对象，PreferredType默认设置为String，其他类型对象PreferredType默认设置为Number。
+
+​	2、**将值转为数字**，ToNumber()。.
+
+| 参数      | 结果                                                         |
+| --------- | ------------------------------------------------------------ |
+| undefined | NaN                                                          |
+| null      | +0                                                           |
+| 布尔值    | true转换1，false转换为+0                                     |
+| 数字      | 无须转换                                                     |
+| 字符串    | 有字符串解析为数字，例如：‘324’转换为324，‘qwer’转换为NaN    |
+| 对象(obj) | 先进行 ToPrimitive(obj, Number)转换得到原始值，在进行ToNumber转换为数字 |
+
+​	3、**将值转为字符串**，ToString()。
+
+| 参数      | 结果                                                         |
+| --------- | ------------------------------------------------------------ |
+| undefined | 'undefined'                                                  |
+| null      | 'null'                                                       |
+| 布尔值    | 转换为'true' 或 'false'                                      |
+| 数字      | 数字转换字符串，比如：1.765转为'1.765'                       |
+| 字符串    | 无须转换                                                     |
+| 对象(obj) | 先进行 ToPrimitive(obj, String)转换得到原始值，在进行ToString转换为字符串 |
+
+举例
+
+```javascript
+({} + {}) = ?
+两个对象的值进行+运算符，肯定要先进行隐式转换为原始类型才能进行计算。
+1、进行ToPrimitive转换，由于没有指定PreferredType类型，{}会使默认值为Number，进行ToPrimitive(input, Number)运算。
+2、所以会执行valueOf方法，({}).valueOf(),返回的还是{}对象，不是原始值。
+3、继续执行toString方法，({}).toString(),返回"[object Object]"，是原始值。
+故得到最终的结果，"[object Object]" + "[object Object]" = "[object Object][object Object]"
+```
+
+
+
+在`==`进行转换时，
+
+1.类型相同时，没有类型转换，主要**注意NaN不与任何值相等，包括它自己**，即NaN !== NaN
+
+2.类型不相同时，
+
+**x,y 为null、undefined两者中一个   // 返回true**
+
+**x、y为Number和String类型时，则转换为Number类型比较**。
+
+有Boolean类型时，**Boolean转化为Number类型比较**。
+
+一个Object类型，一个String或Number类型，将Object类型进行原始转换后，按上面流程进行原始值比较。
+
