--- a/_posts/2019-07-07-vue相关 面试问题.md
+++ b/_posts/2019-07-07-vue相关 面试问题.md
@@ -633,12 +633,21 @@ Vue.component('child',{
 
 #### 10.vue中watch和computed有什么区别？分别在哪种场合下使用？监听的是data里面的值吗？
 
-| computed 计算属性                                            | watch 观察的动作                                            | methods                          |
-| ------------------------------------------------------------ | ----------------------------------------------------------- | -------------------------------- |
-| 数据会被缓存，只要依赖不发生改变，即使页面重新渲染，该方法也不会被调用 | 直接监测一个值的变化，监测值不发生变化，该方法就不会调用    | 每次页面发生渲染，都会被重新调用 |
-| computed中的函数必须用return返回                             | 监听复杂数据类型需用深度监听（在被监听对象中使用`handler`） |                                  |
-| 在computed中不要对data中的属性进行赋值操作。如果对data中的属性进行赋值操作了，就是data中的属性发生改变，从而触发computed中的函数，形成死循环了。 |                                                             |                                  |
-| 使用场景：当一个值受多个属性影响的时候------------购物车商品结算 |                                                             |                                  |
+| computed 计算属性                                            | watch 观察的动作                                             | methods                          |
+| ------------------------------------------------------------ | ------------------------------------------------------------ | -------------------------------- |
+| 1. 数据会被缓存，只要依赖不发生改变，即使页面重新渲染，该方法也不会被调用     2.computed中的函数必须用return返回 | 1. 直接监测一个值的变化，监测值不发生变化，该方法就不会调用； 2. watch只会监听数据的值是否发生改变，而不会去监听数据的地址是否发生改变。也就是说，watch想要监听引用类型数据的变化，需要进行深度监听。 3.watch中的函数有两个参数，前者是newVal，后者是oldVal。 | 每次页面发生渲染，都会被重新调用 |
+| 在computed中不要对data中的属性进行赋值操作。如果对data中的属性进行赋值操作了，就是data中的属性发生改变，从而触发computed中的函数，形成死循环了。 | 监听复杂数据类型需用深度监听（在被监听对象中使用`handler`）；特殊情况下，watch无法监听到数组的变化，特殊情况就是说更改数组中的数据时，数组已经更改，但是视图没有更新。**更改数组必须要用splice()或者$set**。 |                                  |
+| 使用场景：**当一个值受多个属性影响的时候------------购物车商品结算** | 使用场景：**当一条数据的更改影响到多条数据的时候---------搜索框** |                                  |
+
+**computed和watch区别：**
+
+1、 功能上：computed是计算属性，也就是依赖其它的属性计算所得出最后的值，是用于定义**基于数据之上的数据**。watch是监听一个值的变化，然后执行对应的回调，是在**某个数据变化时做一些事情**。
+
+2、 **是否调用缓存**：computed中的函数所依赖的属性没有发生变化，那么调用当前的函数的时候会从缓存中读取，而watch在每次监听的值发生变化的时候都会执行回调。
+
+3、 **是否调用return**：computed中的函数必须要用return返回，watch中的函数不是必须要用return。
+
+4、 如果一个值依赖多个属性（多对一），用`computed`肯定是更加方便的。如果一个值变化后会引起一系列操作，或者一个值变化会引起一系列值的变化（一对多），用`watch`更加方便一些。
 
 
 
