--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -868,7 +868,7 @@ $("#button1").unbind("click.a");
 
 
 
-#### 17.从输入URL到页面加载完成，发生了什么
+#### 17.从输入URL到页面加载完成，发生了什么：segmentfault上面有篇博客：[从输入url到页面展现发生了什么？](https://segmentfault.com/a/1190000013522717)
 
 域名解析 --> 
 
@@ -945,6 +945,101 @@ window.onload = function(){
         Ul.appendChild(newLi);
       }
     }
+```
+
+
+
+#### 19.前端框架Vue、angular、React的优点和缺点
+
+其实Vue.js不是一个框架，因为它只聚焦视图层，是一个构建数据驱动的Web界面的库。
+
+Vue.js通过简单的API（应用程序编程接口）提供高效的数据绑定和灵活的组件系统。
+
+**Vue.js的特性如下：**
+
+```
+1.轻量级的框架
+2.双向数据绑定
+3.指令
+4.插件化
+```
+
+**优点：**
+
+```
+1. 简单：官方文档很清晰，比 Angular 简单易学。
+2. 快速：异步批处理方式更新 DOM。
+3. 组合：用解耦的、可复用的组件组合你的应用程序。
+4. 紧凑：~18kb min+gzip，且无依赖。
+5. 强大：表达式 & 无需声明依赖的可推导属性 (computed properties)。
+6. 对模块友好：可以通过 NPM、Bower 或 Duo 安装，不强迫你所有的代码都遵循 Angular 的各种规定，使用场景更加灵活。
+```
+
+**缺点**
+
+```
+1. 新生儿：Vue.js是一个新的项目，没有angular那么成熟。
+2. 影响度不是很大：google了一下，有关于Vue.js多样性或者说丰富性少于其他一些有名的库。
+3. 不支持IE8：
+```
+
+angularJS是一款优秀的前端JS框架，已经被用于Google的多款产品当中。
+
+**angularJS的特性如下：**
+
+```
+1.良好的应用程序结构
+2.双向数据绑定
+3.指令
+4.HTML模板
+5.可嵌入、注入和测试
+```
+
+**优点：**
+
+```
+1. 模板功能强大丰富，自带了极其丰富的angular指令。
+2. 是一个比较完善的前端框架，包含服务，模板，数据双向绑定，模块化，路由，过滤器，依赖注入等所有功能；
+3. 自定义指令，自定义指令后可以在项目中多次使用。
+4. ng模块化比较大胆的引入了Java的一些东西（依赖注入），能够很容易的写出可复用的代码，对于敏捷开发的团队来说非常有帮助。
+5. angularjs是互联网巨人谷歌开发，这也意味着他有一个坚实的基础和社区支持。
+```
+
+**缺点：**
+
+```
+1. angular 入门很容易 但深入后概念很多, 学习中较难理解.
+2. 文档例子非常少, 官方的文档基本只写了api, 一个例子都没有, 很多时候具体怎么用都是google来的, 或直接问misko,angular的作者.
+3. 对IE6/7 兼容不算特别好, 就是可以用jQuery自己手写代码解决一些.
+4. 指令的应用的最佳实践教程少, angular其实很灵活, 如果不看一些作者的使用原则,很容易写出 四不像的代码, 例如js中还是像jQuery的思想有很多dom操作.
+5. DI 依赖注入 如果代码压缩需要显示声明.
+```
+
+React主要用于构建UI。你可以在React里传递多种类型的参数，如声明代码，帮助你渲染出UI、也可以是静态的HTML DOM元素、也可以传递动态变量、甚至是可交互的应用组件。
+
+**React特性如下：**
+
+```
+1.声明式设计：React采用声明范式，可以轻松描述应用。
+2.高效：React通过对DOM的模拟，最大限度地减少与DOM的交互。
+3.灵活：React可以与已知的库或框架很好地配合。
+```
+
+**优点：**
+
+```
+1. 速度快：在UI渲染过程中，React通过在虚拟DOM中的微操作来实现对实际DOM的局部更新。
+2. 跨浏览器兼容：虚拟DOM帮助我们解决了跨浏览器问题，它为我们提供了标准化的API，甚至在IE8中都是没问题的。
+3. 模块化：为你程序编写独立的模块化UI组件，这样当某个或某些组件出现问题是，可以方便地进行隔离。
+4. 单向数据流：Flux是一个用于在JavaScript应用中创建单向数据层的[架构](https://link.jianshu.com/?t=http://lib.csdn.net/base/16)，它随着React视图库的开发而被Facebook概念化。
+5. 同构、纯粹的javascript：因为搜索引擎的爬虫程序依赖的是服务端响应而不是JavaScript的执行，预渲染你的应用有助于搜索引擎优化。
+6. *兼容性好：比如使用RequireJS来加载和打包，而Browserify和Webpack适用于构建大型应用。它们使得那些艰难的任务不再让人望而生畏。
+```
+
+**缺点：**
+
+```
+React本身只是一个V而已，并不是一个完整的框架，所以如果是大型项目想要一套完整的框架的话，基本都需要加上ReactRouter和Flux才能写大型应用
 ```
 
 
