--- a/_posts/2019-06-19-对象及Json对象.md
+++ b/_posts/2019-06-19-对象及Json对象.md
@@ -22,11 +22,11 @@ typora-root-url: ..
 
 - 面向对象:根据需求找对象,所有的事都用对象来做,注重的是结果
 
-面向对象的特性:封装,继承,多态 (抽象性) **JS没有三条，只有封装**
+面向对象的特性：**封装,继承,多态** (抽象性) **JS没有三条，只有封装**
 
 - 封装性：指的是隐藏内部的实现细节，只对外开放操作接口。优势在于，无论对象内部的代码经过了多少次修改，只要不改变接口，就不会影响到使用这个对象时编写的代码。
 
-- 继承性：是值一个对象继承另一个对象的成员，从而在不改变另一个对象的前提下进行扩展。优势是可以在保持接口兼容性的前提下，对功能进行扩展；增强了代码的复用性，为程序的修改和补充提供便利。
+- 继承性：是指一个对象继承另一个对象的成员，从而在不改变另一个对象的前提下进行扩展。优势是可以在保持接口兼容性的前提下，对功能进行扩展；增强了代码的复用性，为程序的修改和补充提供便利。
 
 - 多态性：指的是同一个操作作用于不同的对象时，会产生不同的执行结果。
 
