--- a/_posts/2019-07-07-vue相关 面试问题.md
+++ b/_posts/2019-07-07-vue相关 面试问题.md
@@ -83,7 +83,7 @@ Object.keys(student).forEach(key => defineReactive(student, key))
 
 
 
-发布订阅模式
+#### 发布订阅模式
 
 在**观察者**模式中，观察者是知道Subject的，Subject一直保持对观察者进行记录。然而，在**发布订阅**模式中，发布者和订阅者**不知道对方的存在**。它们只有通过消息代理进行通信。
 
@@ -94,6 +94,30 @@ Object.keys(student).forEach(key => defineReactive(student, key))
 ![1568963964686](/img/assets_2019/1568963964686.png)
 
 
+
+#### 数据无法双向绑定的情况
+
+ **Object.freeze();  或者   数据未在实例中进行初始化**
+
+```javascript
+var obj = {  foo: 'bar'}
+Object.freeze(obj)
+new Vue({  el: '#app',  data: obj})
+```
+
+Object.freeze()方法有三个特点：
+
+1.使对象不可扩展，无法向其添加新属性。
+
+2.为对象的所有属性将 **configurable** 特性设置为 **false**。在 **configurable** 为 **false** 时，无法更改属性的特性且无法删除属性。
+
+3.为对象的所有数据属性将 **writable** 特性设置为 **false**。当 **writable** 为 false 时，无法更改数据属性值。
+
+
+
+**数据未在实例中进行初始化**
+
+只有当实例被创建时 `data` 中存在的属性才是**响应式**的。也就是说如果你添加一个新的属性在created生命周期完成后，那么数据将无法进行绑定，如直接使用vm.a="xxx"，虽然a成了实例的一个属性，但是对它的任何修改将不是响应式的
 
 #### 2. vue组件之间的传值？
 
