--- a/_posts/2019-09-01-秋招 剑指offer刷题.md
+++ b/_posts/2019-09-01-秋招 剑指offer刷题.md
@@ -294,3 +294,110 @@ var mergeTwoLists = function (l1, l2) {
 
 
 
+#### 笔试题：使用jquery实现一个生成某个DOM元素的xpath函数
+
+功能如下：如果传入id="span_3"的元素，生成的xpath是body>ul[0]>li[0]>span[2] 
+
+```html
+<body>
+	<ul>
+		<li>
+			<span>1</span>
+		</li>
+		<li>
+			<span>2</span>
+			<span>3</span>
+			<span id="span_3">4</span>
+		</li>
+	</ul>
+</body>
+```
+
+实现的逻辑代码如下：
+
+```javascript
+function getPath($ele) {
+        function path(el, obj) {
+          if (el[0].nodeName === 'BODY') {
+            obj['BODY'] = ''
+            return obj
+          } else if (el.parent()[0].nodeName === 'BODY') {
+            var children = el.parent().children()
+            for (var i = 0, len = children.length; i < len; i++) {
+              if (el[0] === children[i]) {
+                obj[el[0].nodeName] = i
+              }
+            }
+            obj['BODY'] = ''
+            return obj
+          } else {
+            var children = el.parent().children()
+            for (var i = 0, len = children.length; i < len; i++) {
+              if (el[0] === children[i]) {
+                obj[el[0].nodeName] = i
+              }
+            }
+            path(el.parent(), obj)
+          }
+        }
+        let o = {};
+        path($ele, o)
+        var str = ''
+        for (var k in o) {
+          if (o[k] === '') {
+            str += k + "&"
+          } else {
+            str += k + "[" + o[k] + "]" + "&"
+          }
+        }
+        return str.trim().split("&").reverse().join(">").slice(1).toLowerCase()
+}
+// 使用
+console.log(getPath($('#test')))
+```
+
+#### 笔试题：连字符字符串与驼峰字符串的相互转换
+
+**连字符转驼峰**：
+
+第一种方法：使用正则匹配函数
+
+```javascript
+let str = 'str-arr-test';
+str = str.replace(/(\w*)-(\w*)/g, function ($1, $2, $3) {
+    //console.log($2, $3);
+    return $2 + $3[0].toUpperCase() + $3.slice(1);
+});
+console.log(str);//strArrTest
+```
+
+第二种方法：使用 js 中 split 和 reduce 方法
+
+```javascript
+let str = 'str-arr-test';
+str = str.split('-').reduce((acc, val, idx) => idx === 0 ?
+    acc + val : acc + val[0].toLocaleUpperCase() + val.slice(1), '');
+console.log(str);//strArrTest
+```
+
+**驼峰转连字符**
+
+第一种方法：正则
+
+```javascript
+let str = 'strArrTest';
+str = str.replace(/([A-Z])/g, function ($1) {
+    return '-' + $1.toLocaleLowerCase();
+});
+console.log(str);//str-arr-test
+```
+
+第二种方法： 使用正则非捕获组来切割数组，然后使用 reduce 遍历所有元素
+
+```javascript
+let str = 'strArrTest';
+str = str.split(/(?=[A-Z])/g).reduce((acc, val, idx) => idx === 0 ?
+    acc + '-' + val : acc + '-' + val[0].toLocaleLowerCase() + val.slice(1));
+console.log(str);//str-arr-test
+```
+
