--- a/_posts/2019-10-10-webpack学习.md
+++ b/_posts/2019-10-10-webpack学习.md
@@ -1,16 +1,18 @@
 ---
 layout:     post
-title:     webpack学习
+title:     用css画一个三角形
 subtitle:  
-date:       2019-10-10
+date:       2019-10-12
 author:     
 header-img: 
 catalog: true
 tags:
-    - < webpack >
+    - < css >
 typora-root-url: ..
 ---
 
 
-# webpack学习
+# 用css画一个三角形
+
+[画三角形链接](https://www.jianshu.com/p/9a463d50e441?utm_campaign=haruki&utm_content=note&utm_medium=reader_share&utm_source=weixin&from=singlemessage&isappinstalled=0)
 
