--- a/_posts/2019-07-03-《图解HTTP协议-修改》.md
+++ b/_posts/2019-07-03-《图解HTTP协议-修改》.md
@@ -15,42 +15,59 @@ typora-root-url: ..
 
 | HTTP         | 中文名称                     | 功能                                                         |
 | ------------ | ---------------------------- | ------------------------------------------------------------ |
-| HTTP         | 超文本传输协议**（应用层）** |                                                              |
+| HTTP         | 超文本传输协议**（应用层）** |生成针对目标Web服务器的HTTP请求报文                                                              |
 | HTML         | 超文本标记语言               |                                                              |
 | URL          | 统一资源定位符（文档地址）   | 表示资源的地点。是URI的子集。                                |
 | URI          | 统一资源标识符               | 用字符串表示某一互联网资源                                   |
 | TCP/IP协议族 | 与互联网相关的协议集合       |                                                              |
-| DNS          | 域名系统**（应用层）**       | 域名到IP地址之间的解析服务。双向反查都可以。                 |
-| TCP          | 传输控制协议（**传输层**）   | 提供可靠的字节流服务。对HTTP请求报文进行分割；并打上标记序号和端口号后转发给网络层。**三次握手** |
+| DNS          | 域名系统**（应用层）**       | 域名到IP地址之间的解析服务。DNS协议提供通过域名/IP名双向查找。                 |
+| TCP          | 传输控制协议（**传输层**）   | 提供可靠的字节流服务，即对HTTP请求报文进行分割（为了方便运输，将大块数据分割成以报文段为单位的数据包进行管理）；并打上标记序号和端口号后转发给网络层。**三次握手** |
 | IP           | 网际协议**（网络层）**       | 把各种数据包传给对方。要确保传送有两个重要条件：IP地址、MAC地址。 |
 | IP地址       |                              | 指明了节点被分配到的地址；                                   |
-| MAC地址      |                              | 指网卡所属的固定地址；（**搜索下一个中转目标的地址**）       |
+| MAC地址      |                              | 指网卡所属的固定地址；（**通信双方经过多台计算机和网络设备中转进行连接，中转的时候，会利用下一站中转设备的MAC地址来搜索下一个中转目标**）       |
 | ARP协议      | 解析地址的协议               | **根据通信方的IP地址，反查出对应的MAC地址**                  |
 | SSL          | 安全套接层                   |                                                              |
 | TLS          | 传输层安全                   |                                                              |
 | MIME         | 多用途因特网邮件扩展         |                                                              |
 
 
+## 第一章 了解Web及网络基础
 
-### TCP/IP 的分层管理
+### 网络基础TCP/IP 的分层管理
 
-- 应用层：为用户提供应用服务。**DNS、HTTP属于应用层。**
+注 http是TCP/IP内部的一个子集。
 
-- 传输层：提供两台计算机之间的数据传输。**TCP属于传输层。**
+- 应用层：为用户提供应用服务。**DNS（域名系统）、FTP（文件传输协议）、HTTP属于应用层。**
 
-- 网络层：处理网上流动的数据包，通过怎样的路径，把数据包给对方。**IP属于网络层。**
+- 传输层：对上层应用层，提供两台计算机之间的数据传输。**TCP（传输控制协议）、UDP（用户数据报协议）属于传输层。**
 
-- 数据链路层：处理链接网络的硬件部分。
+- 网络层：处理网上流动的数据包，选择通过怎样的路径，把数据包给对方。**IP（网际协议）属于网络层。**
 
-  
+- 数据链路层/网络接口层：处理链接网络的硬件部分。
+    **包括控制操作系统、硬件设备的驱动、NIC（网络适配器，即网卡）**
 
-发送端：从应用层**往下走**；每通过一层会**增加该层**的首部信息（封装）；
+
+数据包是网络传输的最小数据单位。
+
+TCP/IP通信传输流：客户端到服务器通过分层顺序传输
+路由选择：在到达通信目标前的中转过程，计算机和路由器等网络设备，都只能获悉很粗略的传输路线，无法掌握互联网中全面传输情况
+
+![1571468854066](/img/assets_2019/1571468854066.png)
+
+
+发送端：从应用层**往下走**；每通过一层会**增加该层**的首部信息（这种把数据信息包装起来的做法称为封装）；
 
 接收端：则从链路层**往上走**到应用层；每通过一层会**删除该层**的首部信息；
 
 
 
-### TCP的**三次握手**
+客户端发送到服务器的过程：
+
+![1571468842842](/img/assets_2019/1571468842842.png)
+
+
+
+### TCP的**三次握手**（是为了准确无误得将数据送达目标处，把包送出去后，向对方确认是否送达成功）
 
 - 1.发送端受限发送一个带SYN标志的数据包给对方。
 - 2.接收端收到后，回传一个带有SYN/ACK标志的数据包传达确认信息。
@@ -58,25 +75,37 @@ typora-root-url: ..
 
 
 
+## 第二章 简单的HTTP协议
+HTTP协议规定，请求从用户端发出，最后服务器响应改请求。（肯定是从客户端开始建立通信的，服务器在没有收到请求之前不会发送响应）
+
+
 ### 请求报文/响应报文
-
 **请求报文**：由**请求方法、请求URI、协议版本**（三者组成**请求行**）、可选的请求首部字段和内容实体构成。
+GET /index.htm HTTP/1.1
+Host：hackr.jp
+请求方法：请求访问服务器的类型；请求URI：指明请求访问的资源对象；
 
-**响应报文**：由**协议版本、状态码、解释状态码的原因短语**（三者组成**状态行**）、可选的响应首部字段及实体主体构成。
+![1571468761996](/img/assets_2019/1571468761996.png)
 
-​	两种报文中，报文首部和报文主体由最初的空行来划分。
+**响应报文**：由**协议版本、状态码、解释状态码的原因短语**（三者组成**状态行**）、可选的响应首部字段及实体主体构成。	两种报文中，报文首部和报文主体由最初的空行来划分。
+
+![1571468744879](/img/assets_2019/1571468744879.png)
 
 - 请求方法：GET访问**已被URI识别的资源**。指定的资源经服务器端解析后返回响应内容。
 
-  ​					POST用来**传输实体的主体**。
+  ![1571468713950](/img/assets_2019/1571468713950.png)
+
+  ​				POST用来**传输实体的主体**。返回服务器接收数据的处理结果。
+
+  ![1571468684320](/img/assets_2019/1571468684320.png)
 
   ​					HEAD获得**报文首部**。用于确认URI的有效性及资源更新的日期时间。
 
   ​					OPTIONS**查询针对请求URI指定的资源支持的方法**。
 
-  ​					CONNECT用隧道协议连接代理。**用SSL和TLS把通信内容加密后**经网络隧道传输。
+  ​					CONNECT用隧道协议连接代理。用SSL和TLS把通信内容加密后经网络隧道传输。
 
-  ​					PUT用来传输文件，但是自身不带验证机制，存在安全性问题。
+  ​					PUT用来传输文件，但是自身不带验证机制，任何人都可以上传文件，存在安全性问题。
 
   ​					DELETE按请求URI删除指定的资源，但是自身不带验证机制，存在安全性问题。
 
@@ -84,9 +113,43 @@ typora-root-url: ..
 
 - 请求URI：指定方式很多种，可以用*代替，可以写完整，也可以在首部字段Host中写明网络域名或IP地址
 
-①GET http://hackr.jp/index.htm HTTP/1.1  ②GET /index.htm HTTP/1.1   ③OPTIONS * HTTP/1.1
+①GET http://hackr.jp/index.htm HTTP/1.1  (URI是完整的请求URI)
+②GET /index.htm HTTP/1.1  
+  Host: hackr.jp    (在首部字段Host写明网络域名或IP地址)               
+③OPTIONS * HTTP/1.1.（这是用来查询HTTP服务器端支持的HTTP方法种类）
 
-​																				 Host: hackr.jp                   （ * 表示对服务器本身发起请求）
+如果用*代替URI的话， 表示对服务器本身发起请求。
+​
+
+- ### 常见请求头
+
+```http
+Accept: text/html,image/*      // 浏览器接受的数据类型
+
+Accept-Charset: ISO-8859-1     // 浏览器接受的编码格式
+
+Accept-Encoding: gzip,compress  //浏览器接受的数据压缩格式
+
+Accept-Language: en-us,zh-       //浏览器接受的语言
+
+Host: www.it315.org:80          //（必须的）当前请求访问的目标地址（主机:端口）
+
+If-Modified-Since: Tue, 11 Jul 2000 18:23:51 GMT  --浏览器最后的缓存时间
+
+Referer: http://www.it315.org/index.jsp      -- 当前请求来自于哪里
+
+User-Agent: Mozilla/4.0 (compatible; MSIE 5.5; Windows NT 5.0)  --浏览器类型
+
+Cookie:name=eric                     -- 浏览器保存的cookie信息
+
+Connection: close/Keep-Alive            -- 浏览器跟服务器连接状态。close: 连接关闭  keep-alive：保存连接。
+
+Date: Tue, 11 Jul 2000 18:23:51 GMT      -- 请求发出的时间
+```
+
+
+
+​											
 
 - 状态码：表示请求成功或失败的数字代码
 
@@ -94,7 +157,8 @@ typora-root-url: ..
 
 ### Cookie技术
 
-- HTTP协议自身不具备保存之前发送过的请求或响应的功能，即**无状态协议**。
+- HTTP协议自身不具备保
+- 存之前发送过的请求或响应的功能，即**无状态协议**。
 
 为了实现期望的保持状态功能，于是引入了Cookie技术。
 
@@ -138,11 +202,11 @@ Set-Cookie的几个属性：
 
 
 
-- 301 Moved Permanently **永久性重定向**。表示请求的资源已被分配了新的URI。
-- 302  Found **临时性重定向**。表示请求的资源已被分配了新的URI，希望用户本次能够使用新的URI。
+- 301 Moved Permanently **永久性重定向**。表示请求的资源已被分配了新的URI，**以后应使用新URL**。
+- **302**  Found **临时性重定向**。表示请求的资源已被分配了新的URI，**本次请求暂且使用新URL**。
 - 307 Temporary Redirect 临时性重定向。与302含义相同。
 - 303 See Other 由于请求对应的资源**存在着另一个URI**，应使用GET方法定向获取请求的资源。
-- 304 Not Modified 客户端发送的附带条件的请求时，服务器允许请求访问资源，但**资源未满足条件**。
+- **304** Not Modified 客户端发送的附带条件的请求时，服务器允许请求访问资源，**但服务器端资源未改变，可直接使用客户端未过期的缓存**。
 
 
 
