--- a/_posts/2019-07-07-html相关 面试问题.md
+++ b/_posts/2019-07-07-html相关 面试问题.md
@@ -191,3 +191,65 @@ DOM ready：（也叫DOMContentLoaded ），在第4步完成后触发；
 		1）重绘：根据元素的新属性重新绘制，使元素呈现新的外观
 　　2）重排：当渲染树中的一部分因为元素的规模尺寸，布局，隐藏等改变而需要重新构建
 　　3）重排必定会引发重绘，但重绘不一定会引发重排
+
+
+
+
+
+#### 7.滚动条
+
+只要网页内容大于视窗，滚动条就会出现。
+
+目标：没有滚动条影响美观，但仍旧可以滚动
+
+**方法1**：在webkit内核的浏览器里可以定义滚动条样式，在CSS初始处定义
+
+```css
+--Chrome--
+body::-webkit-scrollbar{
+	display:none;
+}
+--IE/Edge--
+body{
+    -ms-overflow-style: none;
+}
+--Firefox--
+html {
+    overflow: -moz-hidden-unscrollable; /*注意！若只打 hidden，chrome 的其它 hidden 会出问题*/
+    height: 100%;
+}
+
+body {
+	height: 100%;
+	width: calc(100vw + 18px); /*浏览器滚动条的长度大约是 18px*/
+	overflow: auto;
+}
+```
+
+方法2：在div外面再套一个div，内层是有滚动条的，但是我们看不到了
+
+外面的div设置overflow:hidden；
+
+里面的div设置 overflow-y: scroll;overflow-x: hidden;
+
+再设置外层div的width小于内层div的width。
+
+```html
+<div class="outer">
+    <div class="inner">     
+    </div>
+</div>
+```
+
+```css
+.outer{
+	overflow:hidden;
+    width:200px;
+}
+.inner{
+    overflow-y:scroll;
+    overflow-x:hidden;
+    width:220px;
+}
+```
+
