--- a/_posts/2019-07-07-vue相关 面试问题.md
+++ b/_posts/2019-07-07-vue相关 面试问题.md
@@ -229,9 +229,39 @@ state：管理项目的数据（进行数据初始化）；
 
 mutations：主要用于操作state中的数据`store.commit('increment')`；
 
-action：通过提交 mutation 的方式，而非直接改变 `store.state.count`，是因为我们想要更明确地追踪到状态的变化；
+action：也可以直接修改state，**通过提交 mutation 的方式**，而非直接改变 `store.state.count`，是因为我们想要更明确地追踪到状态的变化；
 
 getter：就像计算属性，getter 的返回值会根据它的依赖被缓存起来，且只有当它的依赖值发生了改变才会被重新计算；getter 接受 state 作为其第一个参数；
+
+
+
+#### mutation和action之间有什么区别？怎么写代码修改vuex中的数据？
+
+```javascript
+Vuex.Store({
+  state,
+  actions,
+  mutation
+});
+```
+
+action可以包含任意异步操作，提交的是mutation，而不是直接变更状态；
+
+mutation是同步的。使用`this.$store.commit('xxx')` 来提交mutation。
+
+（下文来自尤大大）
+
+区分 actions 和 mutations 并不是为了解决竞态问题，而是**为了能用 devtools 追踪状态变化**。
+
+事实上在 vuex 里面 actions 只是一个架构性的概念，并不是必须的，说到底只是一个函数，你在里面想干嘛都可以，只要**最后触发 mutation 就行**。异步竞态怎么处理那是用户自己的事情。vuex 真正限制你的只有 **mutation 必须是同步的**这一点（在 redux 里面就好像 reducer 必须同步返回下一个状态一样）。
+
+**同步的意义在于这样每一个 mutation 执行完成后都可以对应到一个新的状态**（和 reducer 一样），这样 devtools 就可以打个 snapshot 存下来，然后就可以随便 time-travel 了。
+
+如果你开着 devtool 调用一个异步的 action，你可以清楚地看到它所调用的 mutation 是何时被记录下来的，并且可以立刻查看它们对应的状态。
+
+
+
+
 
 ```html
 <div id="app1">
