--- a/_posts/2019-07-07-js相关 面试问题.md
+++ b/_posts/2019-07-07-js相关 面试问题.md
@@ -1054,3 +1054,10 @@ alert(sum);//13
 
 
 #### 24.form标签对之间，可以出现p、ul等非表单域元素吗？可以
+
+
+
+#### 25.bind、apply、call三者区别？用apply实现bind
+
+![1571448536088](/img/assets_2019/1571448536088.png)
+
