--- a/_posts/2019-06-29-《精通CSS 第三版》.md
+++ b/_posts/2019-06-29-《精通CSS 第三版》.md
@@ -12,7 +12,7 @@ typora-root-url: ..
 ---
 
 
-- 缩写词解释.css
+- #### 缩写词解释.css
 
 ```css
 /*缩写词下面加一条下划线，悬停状态的鼠标指针改为问号*/
@@ -24,7 +24,7 @@ abbr[title]:hover {
 }
 ```
 
-- 段落首字下沉.css
+- #### 段落首字下沉.css
 
 ```html
 <h1>Title</h1>
@@ -49,7 +49,7 @@ abbr[title]:hover {
 }
 ```
 
-- 邮箱地址无效的时候输入框变红.css
+- #### 邮箱地址无效的时候输入框变红.css
 
 ```css
 /* 如果输入框中包含有效的电子邮件地址 */
@@ -62,7 +62,7 @@ input[type="email"]:invalid {
 }
 ```
 
-- 媒体对象布局模式.css
+- #### 媒体对象布局模式.css
 
 ```css
 .media-block {
@@ -89,7 +89,7 @@ input[type="email"]:invalid {
 </div>
 ```
 
-- 媒体对象布局模式优化.css
+- #### 媒体对象布局模式优化.css
 
 ```css
 .media-block {
@@ -115,7 +115,7 @@ input[type="email"]:invalid {
 </div>
 ```
 
-- 多栏的文本基线对齐.css
+- #### 多栏的文本基线对齐.css
 
 ```css
 /* h2 是72px高，h3 是48px 高 ，文本是默认 16px 高。h2和h3是征文行高的整数倍。*/
@@ -133,7 +133,7 @@ h3 {
 }
 ```
 
-- 压印、浮雕标题.css
+- #### 压印、浮雕标题.css
 
 ```css
 .impressed {
@@ -148,7 +148,7 @@ h3 {
 }
 ```
 
-- 仿手写广告牌字体.css
+- #### 仿手写广告牌字体.css
 
 ```css
 h1 {
@@ -166,7 +166,7 @@ h1 {
 }
 ```
 
--  3D阴影效果标题.css
+-  #### 3D阴影效果标题.css
 
 ```css
 h1 {
@@ -198,7 +198,7 @@ h1 {
 }
 ```
 
-- 评论气泡小三角形.css
+- #### 评论气泡小三角形.css
 
 ```css
 	.comment{
@@ -225,7 +225,7 @@ h1 {
 
 ![](/img/assets_2019/comment.png)
 
-- 在空间中行内块的垂直居中.css
+- #### 在空间中行内块的垂直居中.css
 
 ```css
 .author-image ,
@@ -234,7 +234,7 @@ h1 {
 }
 ```
 
-- 在容器里面行内块元素的垂直居中.css
+- #### 在容器里面行内块元素的垂直居中.css
 
 ```css
 .author-meta:before {
@@ -246,7 +246,7 @@ h1 {
     
 ```
 
-- 布局中左一，右三.css
+- #### 布局中左一，右三.css
 
 ```css
 .navbar ul {
@@ -257,7 +257,7 @@ h1 {
 }
 ```
 
-- 块级格式化上下文规则（BFC）的触发
+- #### 块级格式化上下文规则（BFC）的触发
 
 ```css
 /* 这个规则规定了 1.页面必须自动包含突出的浮动元素（否则浮动元素中的内容可能会跑到可滚动区域之外），2. 而且所有块级盒子的左边界默认与包含快的左边界对齐。 */
