--- a/_posts/2019-07-07-面试题整理 .md
+++ b/_posts/2019-07-07-面试题整理 .md
@@ -86,24 +86,371 @@ typora-root-url: ..
 
 ### 1. 跨域怎么实现？jsonp的原理是什么？
 
-跨域，指的是浏览器不能执行其他网站的脚本。浏览器执行`javascript`脚本时，会检查这个脚本属于哪个页面，如果不是同源页面，就不会被执行。
+跨域，指的是浏览器不能执行其他网站的脚本。浏览器执行`javascript`脚本时，会检查这个脚本属于哪个页面，如果不是同源页面，就不会被执行。**跨域并不是请求发不出去，请求能发出去，服务端能收到请求并正常返回结果，只是结果被浏览器拦截了**。
+
+**同源策略限制内容有：**
+
+- Cookie、LocalStorage、IndexedDB 等存储性内容
+- DOM 节点
+- AJAX 请求发送后，结果被浏览器拦截了
 
 ![img](/img/assets_2019/1620)
 
 解决办法：
 
-①**JSONP**：注意JSONP只支持GET请求，不支持POST请求。
+[跨域--多种解决方式]: https://juejin.im/post/5c23993de51d457b8c1f4ee1	"写的比较详细的多种解决跨域的方式"
+
+①**JSONP**：注意JSONP只支持GET请求，不支持POST请求，**不安全可能会遭受XSS攻击**。
 
 原理：ajax请求受同源策略影响，不允许进行跨域请求，而**script标签src属性**中的链接却可以**访问跨域的js脚本**，利用这个特性，服务端不再返回JSON格式的数据，而是**返回一段调用某个函数的js代码**，在src中进行了调用，这样实现了跨域。
 
-②**代理**：写后端接口，在后端调用页面拿到返回值返回给html文件。相当于绕过了浏览器，就不会存在跨域问题。
+```javascript
+// index.html
+function jsonp({ url, params, callback }) {
+  return new Promise((resolve, reject) => {
+    let script = document.createElement('script')
+    window[callback] = function(data) {
+      resolve(data)
+      document.body.removeChild(script)
+    }
+    params = { ...params, callback } // wd=b&callback=show
+    let arrs = []
+    for (let key in params) {
+      arrs.push(`${key}=${params[key]}`)
+    }
+    //创建一个<script>标签，把那个跨域的API数据接口地址，赋值给script的src,还要在这个地址中向服务器传递该函数名（可以通过问号传参:?callback=show）
+    script.src = `${url}?${arrs.join('&')}`
+    document.body.appendChild(script)
+  })
+}
 
-③**PHP端修改header**
+jsonp({
+  url: 'http://localhost:3000/say',
+  params: { wd: 'Iloveyou' },
+  callback: 'show'
+}).then(data => {
+  console.log(data)
+})
+//上面这段代码相当于向http://localhost:3000/say?wd=Iloveyou&callback=show这个地址请求数据，然后后台返回show('我不爱你')，最后会运行show()这个函数，打印出'我不爱你'
+```
+
+②**CORS**
+
+浏览器会自动进行 CORS 通信，实现 CORS 通信的关键是后端。只要后端实现了 CORS，就实现了跨域。
+
+**服务端设置 Access-Control-Allow-Origin 就可以开启 CORS**。 该属性表示哪些域名可以访问资源，如果设置通配符则表示所有网站都可以访问资源。
+
+在发送请求时，分为两种情况，简单请求和复杂请求。
+
+**简单请求：**
+
+只要同时满足以下两大条件，就属于简单请求
+
+条件1：使用**GET、HEAD、POST方法之一**；
+
+条件2：**Content-Type的值是text/plain、multipart/form-data、application/x-www-form-urlencoded三者之一**；
+
+**复杂请求：**
+
+除了简单请求，就是复杂请求。
+
+复杂请求的CORS请求，**会在正式通信之前，增加一次HTTP查询请求**，称为"预检"请求，**该请求是 option 方法的，通过该请求来知道服务端是否允许跨域请求**。
+
+比如使用PUT方法进行后台请求的时候，后端需进行如下配置
 
 ```javascript
-header('Access-Control-Allow-Origin:*');//允许所有来源访问
-header('Access-Control-Allow-Method:POST,GET');//允许访问的方式
+// 允许哪个方法访问我
+res.setHeader('Access-Control-Allow-Methods', 'PUT')
+// 预检的存活时间
+res.setHeader('Access-Control-Max-Age', 6)
+// OPTIONS请求不做任何处理
+if (req.method === 'OPTIONS') {
+  res.end() 
+}
+// 定义后台返回的内容
+app.put('/getData', function(req, res) {
+  console.log(req.headers)
+  res.end('我不爱你')
+})
 ```
+
+**③postMessage**
+
+postMessage是HTML5 XMLHttpRequest Level 2中的API，且是为数不多可以跨域操作的window属性之一，它可用于解决以下方面的问题：
+
+- 页面和其打开的新窗口的数据传递
+- 多窗口之间消息传递
+- 页面与嵌套的iframe消息传递
+- 上面三个场景的跨域数据传递
+
+**postMessage()方法允许来自不同源的脚本采用异步方式进行有限的通信，可以实现跨文本档、多窗口、跨域消息传递**。
+
+```javascript
+otherWindow.postMessage(message, targetOrigin, [transfer]);
+```
+
+参数解释：
+
+message: 将要发送到其他 window的**数据**。
+
+targetOrigin:通过窗口的origin属性来**指定哪些窗口能接收到消息事件**，其值可以是字符串"*"（表示无限制）或者一个URI。在发送消息的时候，如果目标窗口的协议、主机地址或端口这三者的任意一项不匹配targetOrigin提供的值，那么消息就不会被发送；只有三者完全匹配，消息才会被发送。
+
+transfer(可选)：是一串和message 同时传递的 Transferable 对象. 这些对象的所有权将被转移给消息的接收方，而发送一方将不再保有所有权。
+
+**④websocket协议**
+
+Websocket是HTML5的一个持久化的协议，它实现了浏览器与服务器的全双工通信，同时也是跨域的一种解决方案。**WebSocket和HTTP都是应用层协议，都基于 TCP 协议**。但是 **WebSocket 是一种双向通信协议，在建立连接之后，WebSocket 的 server 与 client 都能主动向对方发送或接收数据**。同时，WebSocket 在建立连接时需要借助 HTTP 协议，连接建立好了之后 client 与 server 之间的双向通信就与 HTTP 无关了。
+
+原生WebSocket API使用起来不太方便，我们使用`Socket.io`，它很好地封装了webSocket接口，提供了更简单、灵活的接口，也对不支持webSocket的浏览器提供了向下兼容。
+
+```javascript
+//本地文件socket.html向localhost:3000发生数据和接受数据
+
+// socket.html
+<script>
+    let socket = new WebSocket('ws://localhost:3000');
+    socket.onopen = function () {
+      socket.send('我爱你');//向服务器发送数据
+    }
+    socket.onmessage = function (e) {
+      console.log(e.data);//接收服务器返回的数据
+    }
+</script>
+
+// server.js
+let express = require('express');
+let app = express();
+let WebSocket = require('ws');//记得安装ws
+let wss = new WebSocket.Server({port:3000});
+wss.on('connection',function(ws) {
+  ws.on('message', function (data) {
+    console.log(data);
+    ws.send('我不爱你')
+  });
+})
+
+```
+
+
+
+**⑤Node中间件代理（两次跨域）**
+
+实现原理：**同源策略是浏览器需要遵循的标准，而如果是服务器向服务器请求就无需遵循同源策略。** 代理服务器，需要做以下几个步骤：
+
+- 接受客户端请求 。
+- 将请求 转发给服务器。
+- 拿到服务器 响应 数据。
+- 将 响应 转发给客户端。
+
+![img](/img/assets_2019/1)
+
+```javascript
+//本地文件index.html文件，通过代理服务器http://localhost:3000向目标服务器http://localhost:4000请求数据。
+
+// index.html(http://127.0.0.1:5500)
+ <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script>
+      $.ajax({
+        url: 'http://localhost:3000',
+        type: 'post',
+        data: { name: 'xiamen', password: '123456' },
+        contentType: 'application/json;charset=utf-8',
+        success: function(result) {
+          console.log(result) // {"title":"fontend","password":"123456"}
+        },
+        error: function(msg) {
+          console.log(msg)
+        }
+      })
+     </script>
+
+// server1.js 代理服务器(http://localhost:3000)
+const http = require('http')
+// 第一步：接受客户端请求
+const server = http.createServer((request, response) => {
+  // 代理服务器，直接和浏览器直接交互，需要设置CORS 的首部字段
+  response.writeHead(200, {
+    'Access-Control-Allow-Origin': '*',
+    'Access-Control-Allow-Methods': '*',
+    'Access-Control-Allow-Headers': 'Content-Type'
+  })
+  // 第二步：将请求转发给服务器
+  const proxyRequest = http
+    .request(
+      {
+        host: '127.0.0.1',
+        port: 4000,
+        url: '/',
+        method: request.method,
+        headers: request.headers
+      },
+      serverResponse => {
+        // 第三步：收到服务器的响应
+        var body = ''
+        serverResponse.on('data', chunk => {
+          body += chunk
+        })
+        serverResponse.on('end', () => {
+          console.log('The data is ' + body)
+          // 第四步：将响应结果转发给浏览器
+          response.end(body)
+        })
+      }
+    )
+    .end()
+})
+server.listen(3000, () => {
+  console.log('The proxyServer is running at http://localhost:3000')
+})
+
+// server2.js(http://localhost:4000)
+const http = require('http')
+const data = { title: 'fontend', password: '123456' }
+const server = http.createServer((request, response) => {
+  if (request.url === '/') {
+    response.end(JSON.stringify(data))
+  }
+})
+server.listen(4000, () => {
+  console.log('The server is running at http://localhost:4000')
+})
+
+```
+
+**⑥nginx反向代理**
+
+实现原理类似于Node中间件代理，需要你搭建一个**中转nginx服务器，用于转发请求**。
+
+使用nginx反向代理实现跨域，**是最简单的跨域方式**。只需要修改nginx的配置即可解决跨域问题，支持所有浏览器，支持session，不需要修改任何代码，并且不会影响服务器性能。
+
+实现思路：通过nginx配置一个代理服务器（域名与domain1相同，端口不同）做跳板机，反向代理访问domain2接口，并且可以顺便修改cookie中domain信息，方便当前域cookie写入，实现跨域登录。
+
+```javascript
+// proxy服务器
+server {
+    listen       81;
+    server_name  www.domain1.com;
+    location / {
+        proxy_pass   http://www.domain2.com:8080;  #反向代理
+        proxy_cookie_domain www.domain2.com www.domain1.com; #修改cookie里域名
+        index  index.html index.htm;
+
+        # 当用webpack-dev-server等中间件代理接口访问nignx时，此时无浏览器参与，故没有同源限制，下面的跨域配置可不启用
+        add_header Access-Control-Allow-Origin http://www.domain1.com;  #当前端只跨域不带cookie时，可为*
+        add_header Access-Control-Allow-Credentials true;
+    }
+}
+```
+
+**⑦window.name + iframe**
+
+window.name属性的独特之处：name值在不同的页面（甚至不同域名）加载后依旧存在，并且可以支持非常长的 name 值（2MB）。
+
+```javascript
+//其中a.html和b.html是同域的，都是http://localhost:3000;而c.html是http://localhost:4000
+// a.html(http://localhost:3000/b.html)
+<iframe src="http://localhost:4000/c.html" frameborder="0" onload="load()" id="iframe"></iframe>
+<script>
+    let first = true
+    // onload事件会触发2次，第1次加载跨域页，并留存数据于window.name
+    function load() {
+      if(first){
+      // 第1次onload(跨域页)成功后，切换到同域代理页面
+        let iframe = document.getElementById('iframe');
+        iframe.src = 'http://localhost:3000/b.html';
+        first = false;
+      }else{
+      // 第2次onload(同域b.html页)成功后，读取同域window.name中数据
+        console.log(iframe.contentWindow.name);
+      }
+    }
+</script>
+#b.html为中间代理页，与a.html同域，内容为空。
+ // c.html(http://localhost:4000/c.html)
+  <script>
+    window.name = '我不爱你'  
+  </script>
+```
+
+总结：**通过iframe的src属性由外域转向本地域**，跨域数据即由iframe的window.name从外域传递到本地域。这个就巧妙地绕过了浏览器的跨域访问限制，但同时它又是安全操作。
+
+**⑧location.hash + iframe**
+
+实现原理： a.html欲与c.html跨域相互通信，通过中间页b.html来实现。 三个页面，不同域之间利用iframe的location.hash传值，相同域之间直接js访问来通信。
+
+具体实现步骤：一开始a.html给c.html传一个hash值，然后c.html收到hash值后，再把hash值传递给b.html，最后b.html将结果放到a.html的hash值中。 同样的，a.html和b.html是同域的，都是`http://localhost:3000`;而c.html是`http://localhost:4000`
+
+```javascript
+ // a.html
+  <iframe src="http://localhost:4000/c.html#iloveyou"></iframe>
+  <script>
+    window.onhashchange = function () { //检测hash的变化
+      console.log(location.hash);
+    }
+  </script>
+```
+
+```javascript
+ // b.html
+  <script>
+    window.parent.parent.location.hash = location.hash 
+    //b.html将结果放到a.html的hash值中，b.html可通过parent.parent访问a.html页面
+  </script>
+```
+
+```javascript
+ // c.html
+ console.log(location.hash);
+  let iframe = document.createElement('iframe');
+  iframe.src = 'http://localhost:3000/b.html#idontloveyou';
+  document.body.appendChild(iframe);
+```
+
+**⑨document.domain + iframe**
+
+**该方式只能用于二级域名相同的情况下，比如 a.test.com 和 b.test.com 适用于该方式**。只需要给页面添加 `document.domain ='test.com'` 表示二级域名都相同就可以实现跨域。
+
+实现原理：两个页面都通过js强制设置document.domain为基础主域，就实现了同域。
+
+```javascript
+//页面a.zf1.cn:3000/a.html获取页面b.zf1.cn:3000/b.html中a的值
+
+// a.html
+<body>
+ 	helloa
+  		<iframe src="http://b.zf1.cn:3000/b.html" frameborder="0" onload="load()" id="frame"></iframe>
+  		<script>
+    			document.domain = 'zf1.cn'
+    			function load() {
+      				console.log(frame.contentWindow.a);
+    			}
+  		</script>
+</body>
+
+
+// b.html
+<body>
+   	hellob
+   	<script>
+     	document.domain = 'zf1.cn'
+     	var a = 100;
+   	</script>
+</body>
+```
+
+**总结：**
+
+**CORS支持所有类型的HTTP请求，是跨域HTTP请求的根本解决方案**；
+
+**JSONP只支持GET请求**，JSONP的优势在于支持老式浏览器，以及可以向不支持CORS的网站请求数据。
+
+不管是Node中间件代理还是nginx反向代理，主要是通过**同源策略对服务器不加限制**。
+
+注：日常工作中，用得比较多的跨域方案是cors和nginx反向代理
+
+
+
+
 
 
 
